# QuickScan

./: AUTHENTICATION.md  README.md
backend/: .env.example  .gitignore  API_ROUTES.md  Cargo.toml  README.md  env.example
backend/scripts/: dev.sh
backend/src/: auth.rs  error.rs  handlers.rs  main.rs  models.rs  openai.rs  routes.rs  storage.rs
frontend/: README.md  SECURITY.md
frontend/QuickScan/: ContentView.swift  QuickScanApp.swift
frontend/QuickScan.xcodeproj/: project.pbxproj
frontend/QuickScan.xcodeproj/project.xcworkspace/xcuserdata/bernardginnjr..xcuserdatad/: UserInterfaceState.xcuserstate
frontend/QuickScan/Models/: Models.swift
frontend/QuickScan/Services/: APIService.swift  AuthService.swift  DocumentUploadExample.swift  KeychainManager.swift  SecurityExample.swift
frontend/QuickScan/Views/: AuthView.swift  DocumentScannerView.swift  ErrorView.swift  FilePickerView.swift  LoadingView.swift  SummaryResultsView.swift  UserProfileView.swift
